Pinba 0.0.5      19 Oct 2009
----------------------------
- Added rusage to timers (not aggregated on server (yet?)).

- Fixed possible crash caused by long script names.
- Disabled query cache for Pinba engine.

Pinba 0.0.4      26 Aug 2009
----------------------------
- Added HTTP response status to the response data.
- Added support of Google Protocol Buffers 2.1.0+.

- Improved configure checks for MySQL sources and libevent.
- Fixed build on MacOS X.
- Fixed build on FreeBSD.
- Fixed build with static libevent of latest versions.

Pinba 0.0.3      04 May 2009
----------------------------
Initial release.